Add picture to Mostaccioli page and fixed spelling on index page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Recipes</h1>
-    <a href="recipes/baked_mostaccioli.html">Bake Mostaccioli</a>
+    <a href="recipes/baked_mostaccioli.html">Baked Mostaccioli</a>
 </body>
 </html>
