--- a/recipes/baked_mostaccioli.html
+++ b/recipes/baked_mostaccioli.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Baked Mostaccioli!!</h1>
+
+    <h2>HTML Image</h2>
+<img src="https://www.allrecipes.com/thmb/MBfab1baUJdV2kwc3ux8SUeOQz0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/283400easy-baked-mostacciolilupini4x3-ac807718fa6548e29b0a0c4235113b88.jpg" alt="Baked Mostaccioli" width="500" height="333">
+
     <a href="../index.html">Home</a>
 
 </body>
