Fill out recipe for mostaccioli

--- a/recipes/baked_mostaccioli.html
+++ b/recipes/baked_mostaccioli.html
@@ -11,7 +11,29 @@
     <h2>HTML Image</h2>
 <img src="https://www.allrecipes.com/thmb/MBfab1baUJdV2kwc3ux8SUeOQz0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/283400easy-baked-mostacciolilupini4x3-ac807718fa6548e29b0a0c4235113b88.jpg" alt="Baked Mostaccioli" width="500" height="333">
 
+<br>
+<h2> Ingredients</h2>
+<ul>
+    <li>32 ounce of mostaccioli pasta</li>
+    <li>1 pound of ground beef</li>
+    <li>1 pound of hot Italian sausage</li>
+    <li>3 jars of your favorite pasta sauce</li>
+    <li>1 lbs of shredded mozzarella cheese</li>
+    <li>1 cup of grated Parmesan cheese</li>
+</ul>
+<h2>Directions</h2>
+<br>
+<ol>
+    <li>Bring a pot of water to a boil. Add mostaccioli to the water and stir occasionally. Cook for 10 minutes then drain</li>
+    <li>Preheat the oven to 350 F and grease baking pan</li>
+    <li>Heat a nonstick pan to medium heat and add in ground beef and Italian sausage add a 1/4 cup of water to help cooking. Cook and stir ground beef until browned. Drain grease and add pasta sause</li>
+    <li>Warm and stir meat sauce mixture over low heat for 3 minutes </li>
+    <li>Add 1/2 of meat sause to baking dish, then add 1/2 of pasta over the sause, add 1/2 of mozzarella and parmesan to baking dish</li>
+    <li>Add the remaining pasta on top of the cheese, cover pasta with the remaining sause, add the remaining chease to top</li>
+    <li>Bake in the oven for 45 minutes</li>
+</ol>
     <a href="../index.html">Home</a>
+
 
 </body>
 </html>
