add tacos to index page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Recipes</h1>
     <a href="recipes/baked_mostaccioli.html">Baked Mostaccioli</a>
+    <a href="recipes/chickenTacos">Chicken Tacos</a>
+
 </body>
 </html>
