--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Recipes</h1>
     <a href="recipes/baked_mostaccioli.html">Baked Mostaccioli</a>
     <br>
-    <a href="recipes/chickenTacos">Chicken Tacos</a>
+    <a href="recipes/chickenTacos.html">Chicken Tacos</a>
 
 </body>
 </html>
