add link to home on tacos page

--- a/recipes/chickenTacos.html
+++ b/recipes/chickenTacos.html
@@ -39,5 +39,6 @@
             <li>Build tacos: Serve and enjoy!</li>
         </ol>
     </p>
+    <a href="../index.html">Home</a>
 </body>
 </html>
